added links to use fontAwesome and created nav

--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web_portfolio</title>
+    <title>akhmed_portfolio</title>
+    <script src="https://kit.fontawesome.com/b5ebed7a74.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    
+    <body> 
+        <header id="home">
+          <div class="header-container wrapper">
+            <nav class="headerNav">
+              <button class="logo">
+                <a href="" >Resume</a>
+              </button>
+              <ul class="navBar">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Projects</a></li>
+                <li><a href="#recomendations">Blog</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul> <!-- end of Nav Bar-->
+            </nav> <!-- end of headerNav -->
 </body>
 </html>
