--- a/index.html
+++ b/index.html
@@ -29,5 +29,25 @@
                 <li><a href="#contact">Contact</a></li>
               </ul> <!-- end of Nav Bar-->
             </nav> <!-- end of headerNav -->
+
+            <div class="headerContent">
+                <div class="headerText" data-aos="fade-down" data-aos-delay="250">
+                  <h1>Hello! I'm Akhmed Nalgiev</h1>
+                  <h2>About Me</h2>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et quod saepe pariatur nesciunt modi quasi, ea temporibus dolorum excepturi ab reprehenderit eveniet, necessitatibus numquam iste nobis ut rem, officiis culpa aliquam laborum eligendi consectetur incidunt corrupti? Sunt iste inventore, recusandae quo neque minus labore explicabo itaque ut est, repellendus tempore!</p>
+                  <div class="linkContainer">
+                    <a href="https://github.com/akhmed0606">Github</a>
+                    <a href="https://www.linkedin.com/in/akhmednalgiev/">LinkedIn</a>
+                    <a href="https://calendly.com/">Calendly</a>
+                  </div> <!--end of link container-->
+                </div> <!-- end of headerText-->
+        
+                <div class="headerPortrait" data-aos="fade-left" data-aos-delay="200">
+                  <img src="./assets/AkhmedHeaderPortrait.svg" alt="Vector Drawing of Me Akhmed Nalgiev">
+                </div> <!-- end of headerPortrait-->
+              </div> <!-- end of headerContent-->
+      
+            </div><!-- end of headerContainer-->
+          </header> <!-- end of header -->
 </body>
 </html>
