fixed icon for jquery

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <section class='skills'>
               <div class="skillsContent wrapper" >
                 <h2>Skills</h2>
-                <ul class="iconList" data-aos="fade-up" data-aos-delay="100">
+                <ul class="iconList">
                   <li class="iconContainer">
                     <i class="fab fa-cuttlefish" aria-hidden="true"></i>
                     <p>C#</p>
@@ -76,7 +76,7 @@
                     <p>CSS</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
-                    <i class="fas fa-dollar-sign" aria-hidden="true"></i>
+                    <img src="./assets/icons8-jquery.svg" aria-hidden="true">
                     <p>jQuery</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
