fixed the content of header and added TS icon

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
             <div class="headerContent">
                 <div class="headerText" >
                   <h1>Hello! I'm Akhmed Nalgiev</h1>
-                  <h2>About Me</h2>
-                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et quod saepe pariatur nesciunt modi quasi, ea temporibus dolorum excepturi ab reprehenderit eveniet, necessitatibus numquam iste nobis ut rem, officiis culpa aliquam laborum eligendi consectetur incidunt corrupti? Sunt iste inventore, recusandae quo neque minus labore explicabo itaque ut est, repellendus tempore!</p>
+                  <h2>Front-End Developer
+                  </h2>
+                  <p>A multidisciplinary <span class="redText">developer</span> with a passion for creating high-performing, scalable and accessible web experiences. <span class='redText'>Looking for a place to grow!</span></p>
+                  <div class="linkContainer">
+                  </p>
                   <div class="linkContainer">
                     <a href="https://github.com/akhmed0606">Github</a>
                     <a href="https://www.linkedin.com/in/akhmednalgiev/">LinkedIn</a>
@@ -66,6 +69,10 @@
                   <li class="iconContainer">
                     <i class="fab fa-js-square" aria-hidden="true"></i>
                     <p>JavaScript</p>
+                  </li> <!--end of iconContainer-->
+                  <li class="iconContainer">
+                    <img src="./assets/icons8-typescript-100.png" aria-hidden="true">
+                    <p>TypeScript</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
                     <i class="fab fa-html5" aria-hidden="true"></i>
