added urls and description of the projects

--- a/index.html
+++ b/index.html
@@ -72,10 +72,6 @@
                     <p>JavaScript</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
-                    <img src="./assets/icons8-typescript-100.png" aria-hidden="true">
-                    <p>TypeScript</p>
-                  </li> <!--end of iconContainer-->
-                  <li class="iconContainer">
                     <i class="fab fa-html5" aria-hidden="true"></i>
                     <p>HTML</p>
                   </li> <!--end of iconContainer-->
@@ -90,6 +86,10 @@
                   <li class="iconContainer">
                     <i class="fab fa-sass" aria-hidden="true"></i>
                     <p>SCSS</p>
+                  </li> <!--end of iconContainer-->
+                  <li class="iconContainer">
+                    <i class="fab fa-bootstrap" aria-hidden="true"></i>
+                    <p>Bootstrap</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
                     <i class="fab fa-git-alt" aria-hidden="true"></i>
@@ -152,12 +152,12 @@
                   </button>
                   <div class="overlay">
                     <i class="fas fa-times"></i>
-                    <h4></h4>
-                    <p>To be added</p>
+                    <h4>Meetup App</h4>
+                    <p>A simple way to meet people. Add your meetup details that you can share and save to favorites</p>
                     <p class="stackUse">JSX | React | CSS | Firebase |</p>
                     <div class="linkBox">
-                      <a href="">Live</a>
-                      <a href="">Repo</a>
+                      <a href="https://akhmed0606.github.io/meetup-app/">Live</a>
+                      <a href="https://github.com/akhmed0606/meetup-app.git">Repo</a>
                     </div><!--end of linkBox-->
                   </div><!-- end of overlayOne-->
                 </li> <!--end of projectOne-->
@@ -168,12 +168,12 @@
                   </button>   
                   <div class="overlay">
                     <i class="fas fa-times"></i>
-                    <h4></h4>
-                    <p>To Be Added</p>
+                    <h4>News App</h4>
+                    <p>New York Times article feed with real-time updates that allows to search the latest news.</p>
                     <p class="stackUse">JSX | React | CSS | Api |</p>
                     <div class="linkBox">
-                      <a href="">Live</a>
-                      <a href="">Repo</a>
+                      <a href="https://akhmed0606.github.io/news_app/">Live</a>
+                      <a href="https://github.com/akhmed0606/news_app.git">Repo</a>
                     </div><!--end of linkBox-->
                   </div><!-- end of overlay-->
                 </li> <!--end of projectTwo-->
@@ -184,12 +184,12 @@
                   </button>
                   <div class="overlay">
                     <i class="fas fa-times"></i>
-                    <h4>Notes</h4>
-                    <p>To be Added</p>
+                    <h4>Sticky Notes App</h4>
+                    <p>Allows to create and save virtual sticky notes, with an added sketching feature.</p>
                     <p class="stackUse">JavaScript | HTML | CSS | Local Storage API</p>
                     <div class="linkBox">
-                      <a href="">Live</a>
-                      <a href="">Repo</a>
+                      <a href="https://akhmed0606.github.io/ProStickyNotes/">Live</a>
+                      <a href="https://github.com/akhmed0606/ProStickyNotes.git">Repo</a>
                     </div><!--end of linkBox-->
                   </div><!-- end of overlay-->
                 </li> <!--end of projectThree-->
@@ -201,11 +201,11 @@
                   <div class="overlay">
                     <i class="fas fa-times"></i>
                     <h4>Hangman</h4>
-                    <p>....</p>
+                    <p>Hangman is a game where the player attempts to build a missing word by guessing one letter at a time. After a certain number of incorrect guesses, the game ends and the player loses. The game also ends if the player correctly identifies all the letters of the missing word.</p>
                     <p class="stackUse">JSX | React | Firebase | API</p>
                     <div class="linkBox">
-                      <a href="">Live</a>
-                      <a href="">Repo</a>
+                      <a href="https://akhmed0606.github.io/hangman/">Live</a>
+                      <a href="https://github.com/akhmed0606/hangman.git">Repo</a>
                     </div><!--end of linkBox-->
                   </div><!-- end of overlay-->
                 </li> <!--end of projectFour-->
