--- a/index.html
+++ b/index.html
@@ -213,6 +213,24 @@
               </ul>     <!-- end of projectList-->
             </section> <!-- end of portfolio-->
             
+            <section class="contact wrapper" id="contact">
+              <h4>Let's chat</h4>
+              <h2>Get in Touch</h2>
+              <form action="mailto:nalgakhmed@gmail.com" enctype="text/plain" method="POST" class="contactForm">
+                <div class="input">
+                  <input type="hidden" name="_next" value="">
+                  <label for="name">Please enter your name</label>
+                  <input type="text" name="name" id="name" placeholder="Name*" required>
+                </div>
+                <div class="input">
+                  <label for="email">Please enter your Email Address</label>
+                  <input type="email" id="email" name="email" placeholder="Email*" required>
+                </div>
+                <label for="message">Please leave a message</label>
+                <textarea name="message" id="message" placeholder="Send me a message!" required></textarea>
+                <button>Send Message</button>
+              </form> <!--end of contactForm-->
+            </section> <!-- end of contact -->
       
 </body>
 </html>
