footer with navigation added in main file

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#portfolio">Projects</a></li>
-                <li><a href="#recomendations">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
               </ul> <!-- end of Nav Bar-->
             </nav> <!-- end of headerNav -->
@@ -231,6 +230,38 @@
                 <button>Send Message</button>
               </form> <!--end of contactForm-->
             </section> <!-- end of contact -->
+
+            <nav class="bottomNav">
+              <ul class="bottomNavMenu wrapper">
+                <li>
+                  <h3>Code</h3>
+                  <a href="https://github.com/akhmed0606">GitHub</a>
+                  <a href="https://codepen.io/akhmed0606">CodePen</a>
+                </li>
+                <li>
+                  <h3>Work</h3>
+                  <a href="https://www.linkedin.com/in/akhmednalgiev/">LinkedIn</a>
+                  <a href="https://calendly.com/nalgakhmed">Calendly</a>
+                </li>
+                <li>
+                  <h3>Reach Me</h3>
+                  <p>43.791677</p>
+                  <p>nalgakhmed@gmail.com</p>
+                </li>
+                <li>
+                  <h3>Social</h3>
+                  <a href="https://twitter.com/akhmednalgiev">Twitter</a>
+                  <a href="https://www.instagram.com/an__vai_06">Instagram</a>
+                </li>
+              </ul> <!--end of bottomNavMenu-->
+            </nav> <!-- end of bottomNav-->
+          </main> <!-- end of main-->
+
+          <footer>
+            <div class="footerContent wrapper">
+              <p>Designed and Developed by Akhmed Nalgiev © 2021</p>
+            </div> <!-- end of footerContent-->
+          </footer> <!-- end of footer-->
       
 </body>
 </html>
