fixed some minor issues

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akhmed_Portfolio</title>
+    <title>Akhmed's Portfolio</title>
     <script src="https://kit.fontawesome.com/b5ebed7a74.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,7 +50,7 @@
                   <h1>Hello! I'm Akhmed Nalgiev</h1>
                   <h2>Front-End Developer
                   </h2>
-                  <p>A multidisciplinary <span class="redText">developer</span> with a passion for creating high-performing, scalable and accessible web experiences. <span class='redText'>Looking for a place to grow!</span></p>
+                  <p>A multidisciplinary <span class="redText">developer</span> who enjoys building scalable, accessible and high-performing web experiences.<span class='redText'> Looking for a place to grow!</span></p>
             
                   <div class="linkContainer">
                     <a href="https://github.com/akhmed0606">Github</a>
@@ -277,7 +277,7 @@
 
           <footer>
             <div class="footerContent wrapper">
-              <p>Designed and Developed by Akhmed Nalgiev © 2021</p>
+              <p>Designed and Developed by Akhmed Nalgiev © 2022</p>
             </div> <!-- end of footerContent-->
           </footer> <!-- end of footer-->
 
