added secure connection for mail

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <section class="contact wrapper" id="contact">
               <h4>Let's chat</h4>
               <h2>Get in Touch</h2>
-              <form action="mailto:nalgakhmed@gmail.com" enctype="text/plain" method="POST" class="contactForm">
+              <form action="https://mailto:nalgakhmed@gmail.com" enctype="text/plain" method="POST" target="_blank" rel="noopener noreferrer" class="contactForm" >
                 <div class="input">
                   <input type="hidden" name="_next" value="">
                   <label for="name">Please enter your name</label>
