--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="aboutText">
                   <h2>About Me</h2>
                   <h4>Front-End Developer</h4>
-                  <p>I have a B.Sc in Math and Computer Science and have recently graduated from Web Development Accelerated at <span class='redText'><a href="www.junocollege.com">Juno College of Technology.</a></span></p><p>My web development journey began a year ago. Having a degree in computer science, I found joy in building <span class="redText">captivating and accessible</span> web applications. As a problem solver who strives for quality and precision, web development feels like an exciting yet challenging next step in my career.</p><p>And as a former boxing personal trainer and business owner, I am grateful to have been entrusted with leading the growth and development of my clients, and in helping them reach their potential.</p>
+                  <p>I have a B.Sc in Math and Computer Science and have recently graduated from Web Development Accelerated at <span class='redText'><a href="www.junocollege.com">Juno College of Technology.</a></span></p><p>My web development journey began a year ago. Having a degree in computer science, I found joy in building <span class="redText">captivating and accessible</span> web applications. As a problem solver who strives for quality and precision, web development feels like an exciting yet challenging next step in my career.</p>
                   <p> 
                     When I am not coding, you can usually find me exploring new trails to hike, giving back to my community by training youth at a local gym or spending time with my adorable cat Charlie.
                   </p>
