update about field

--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@
                 <div class="aboutText">
                   <h2>About Me</h2>
                   <h4>Front-End Developer</h4>
-                  <p>I have a B.Sc in Math and Computer Science and have recently graduated from Web Development Accelerated at <span class='redText'><a href="www.junocollege.com">Juno College of Technology.</a></span></p><p>My web development journey began a year ago. Having a degree in computer science, I found joy in building <span class="redText">captivating and accessible</span> web applications. As a problem solver who strives for quality and precision, web development feels like an exciting yet challenging next step in my career.</p>
+                  <p>Having a degree in <span class="redText">computer science</span>, I found joy in building captivating and accessible web applications early on. Over my <span class="redText">professional career</span>, I've worked with people and teams in deadline-driven, fast-paced environments where I had to use my analytical and decision-making skills. I <span class="redText">love coding</span>, and this shows through my hard work!
                   <p> 
-                    When I am not coding, you can usually find me exploring new trails to hike, giving back to my community by training youth at a local gym or spending time with my adorable cat Charlie.
+                    And when I’m not coding, you can usually find me exploring new trails to hike, giving back to my community by training youth at a local gym or spending time with my cat Charlie.
+
                   </p>
                   <div class="buttonContainer">
                     <a href="#contact">Let's Chat!</a>
