add svg icons to skill section

--- a/index.html
+++ b/index.html
@@ -130,6 +130,18 @@
                     <p>SQL</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
+                    <img src="./assets/1.svg" aria-hidden="true">
+                    <p>Material UI</p>
+                  </li> <!--end of iconContainer-->
+                  <li class="iconContainer">
+                    <img src="./assets/3.svg" aria-hidden="true">
+                    <p>Shopify</p>
+                  </li> <!--end of iconContainer-->
+                  <li class="iconContainer">
+                    <img src="./assets/2.svg" aria-hidden="true">
+                    <p>GraphQL</p>
+                  </li> <!--end of iconContainer-->
+                  <li class="iconContainer">
                     <img src="./assets/icons8-firebase.svg" aria-hidden="true">
                     <p>Firebase</p>
                   </li> <!--end of iconContainer-->
