upload new icons,change icons color

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <h1>Hello! I'm Akhmed Nalgiev</h1>
                   <h2>Front-End Developer
                   </h2>
-                  <p>A multidisciplinary <span class="redText">developer</span> who enjoys building scalable, accessible and high-performing web experiences.<span class='redText'> Looking for a place to grow!</span></p>
+                  <p>An experienced, multidisciplinary <span class="redText">developer</span> who enjoys building scalable, accessible and high-performing web applications.<span class='redText'> Looking for a place to grow!</span></p>
             
                   <div class="linkContainer">
                     <a href="https://github.com/akhmed0606">Github</a>
@@ -94,7 +94,7 @@
                     <p>CSS</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
-                    <img src="./assets/icons8-jquery.svg" aria-hidden="true">
+                    <img src="./assets/5.svg" aria-hidden="true">
                     <p>jQuery</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
@@ -114,12 +114,12 @@
                     <p>API Integration</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
-                    <i class="fab fa-react" aria-hidden="true"></i>
-                    <p>React</p>
+                    <img src="./assets/4.svg" aria-hidden="true">
+                    <p>Next</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
-                    <i class="fas fa-mobile-alt" aria-hidden="true"></i>
-                    <p>Responsive Design</p>
+                    <i class="fab fa-react" aria-hidden="true"></i>
+                    <p>React</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
                     <i class="fas fa-universal-access" aria-hidden="true"></i>
