update resume and skills section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <h1>Hello! I'm Akhmed Nalgiev</h1>
                   <h2>Front-End Developer
                   </h2>
-                  <p>An experienced, multidisciplinary <span class="redText">developer</span> who enjoys building scalable, accessible and high-performing web applications.<span class='redText'> Looking for a place to grow!</span></p>
+                  <p>A multidisciplinary <span class="redText">developer</span> who enjoys building scalable, accessible and high-performing web applications.<span class='redText'> Looking for a place to grow!</span></p>
             
                   <div class="linkContainer">
                     <a href="https://github.com/akhmed0606">Github</a>
@@ -74,16 +74,28 @@
                 <h2>Skills</h2>
                 <ul class="iconList" data-aos="fade-up" data-aos-delay="100">
                   <li class="iconContainer">
+                    <i class="fab fa-js-square" aria-hidden="true"></i>
+                    <p>JavaScript</p>
+                  </li> <!--end of iconContainer-->
+                  <li class="iconContainer">
+                    <img src="./assets/ts.svg" aria-hidden="true">
+                    <p>TypeScript</p>
+                  </li> <!--end of iconContainer-->
+                  <li class="iconContainer">
+                    <img src="./assets/4.svg" aria-hidden="true">
+                    <p>Next</p>
+                  </li> <!--end of iconContainer-->
+                  <li class="iconContainer">
+                    <i class="fab fa-react" aria-hidden="true"></i>
+                    <p>React</p>
+                  </li> <!--end of iconContainer-->
+                  <li class="iconContainer">
                     <i class="fab fa-cuttlefish" aria-hidden="true"></i>
                     <p>C#</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
                     <i class="fab fa-python" aria-hidden="true"></i>
                     <p>Python</p>
-                  </li> <!--end of iconContainer-->
-                  <li class="iconContainer">
-                    <i class="fab fa-js-square" aria-hidden="true"></i>
-                    <p>JavaScript</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
                     <i class="fab fa-html5" aria-hidden="true"></i>
@@ -114,14 +126,6 @@
                     <p>API Integration</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
-                    <img src="./assets/4.svg" aria-hidden="true">
-                    <p>Next</p>
-                  </li> <!--end of iconContainer-->
-                  <li class="iconContainer">
-                    <i class="fab fa-react" aria-hidden="true"></i>
-                    <p>React</p>
-                  </li> <!--end of iconContainer-->
-                  <li class="iconContainer">
                     <i class="fas fa-universal-access" aria-hidden="true"></i>
                     <p>WCAG 2.1</p>
                   </li> <!--end of iconContainer-->
@@ -132,10 +136,6 @@
                   <li class="iconContainer">
                     <img src="./assets/1.svg" aria-hidden="true">
                     <p>Material UI</p>
-                  </li> <!--end of iconContainer-->
-                  <li class="iconContainer">
-                    <img src="./assets/3.svg" aria-hidden="true">
-                    <p>Shopify</p>
                   </li> <!--end of iconContainer-->
                   <li class="iconContainer">
                     <img src="./assets/2.svg" aria-hidden="true">
@@ -157,7 +157,7 @@
                 <div class="aboutText">
                   <h2>About Me</h2>
                   <h4>Front-End Developer</h4>
-                  <p>Having a degree in <span class="redText">computer science</span>, I found joy in building captivating and accessible web applications early on. Over my <span class="redText">professional career</span>, I've worked with people and teams in deadline-driven, fast-paced environments where I had to use my analytical and decision-making skills. I <span class="redText">love coding</span>, and this shows through my hard work!
+                  <p>Having a degree in <span class="redText">computer science</span>, I found joy in building captivating and accessible web applications early on. Over my <span class="redText">academic and professional careers</span>, I've worked with people and teams in deadline-driven, fast-paced environments where I had to use my analytical and decision-making skills. I <span class="redText">love coding</span>, and this shows through my hard work!
                   <p> 
                     And when I’m not coding, you can usually find me exploring new trails to hike, giving back to my community by training youth at a local gym or spending time with my cat Charlie.
 
