update text in about section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="aboutText">
                   <h2>About Me</h2>
                   <h4>Front-End Developer</h4>
-                  <p>Having a degree in <span class="redText">computer science</span>, I found joy in building captivating and accessible web applications early on. Over my <span class="redText">academic and professional careers</span>, I've worked with people and teams in deadline-driven, fast-paced environments where I had to use my analytical and decision-making skills. I <span class="redText">love coding</span>, and this shows through my hard work!
+                  <p> I found joy in building captivating and accessible web applications early on. Over my <span class="redText">academic and professional careers</span>, I've worked with people and teams in deadline-driven, fast-paced environments where I had to use my analytical and decision-making skills. I <span class="redText">love coding</span>, and this shows through my hard work!
                   <p> 
                     And when I’m not coding, you can usually find me exploring new trails to hike, giving back to my community by training youth at a local gym or spending time with my cat Charlie.
 
