google verific. meta tag add

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="XtpHHXHmmzq4ynMvMaEJ-yIdsIiJ4wWDjnN3Alw_M64" />
     <title>Akhmed's Portfolio</title>
     <script src="https://kit.fontawesome.com/b5ebed7a74.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
